# ultraplex_rs

./: .gitignore  Cargo.toml  Makefile  README.md
src/: align.rs  cli.rs  demux.rs  lib.rs  trim.rs
tests/: e2e_trim.rs
