[package]
name = "ultraplex_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "ultraplex_rs"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
needletail = "0.6"
log = "0.4"
env_logger = "0.11"
flate2 = "1"
csv = "1.3"
rayon = "1"

[dev-dependencies]
tempfile = "3"
flate2 = "1"